--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -37,7 +37,10 @@ mybatis-plus:
   type-enums-package: com.paddi.common
 # minio 文件存储配置信息
 minio:
-  endpoint: http://8.134.113.149:9000
+  endpoint: http://8.134.134.68:9000
   accesskey: Paddi-Yan
   secretKey: airenpA1
-  bucket: files
+  fileBucket: files
+  profileBucket: profile
+profile:
+    suffix: http://8.134.134.68/profile/
